--- a/scss/common/_canvas.scss
+++ b/scss/common/_canvas.scss
@@ -6,12 +6,15 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 300;
+    z-index: 10000;
     canvas{
         position: absolute;
-        top: 25%;
+        top: 1rem;
         left: 0;
         right: 0;
+        width: 85% !important;
+        height: unset !important;
+        margin: auto;
     }
     #download-button{
         position: absolute;
