--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -19,7 +19,7 @@
 #about-section{
     display: none;
     position: fixed;
-    z-index: 200;
+    z-index: 10000;
     left: 5%;
     right: 5%;
     top: 5%;
