--- a/scss/layouts/_tiers.scss
+++ b/scss/layouts/_tiers.scss
@@ -27,6 +27,7 @@
     .character{
         background: $lighter;
         height: $tier-height !important;
+        width: $tier-height !important;
         img{
             height: $tier-height;
             width: $tier-height;
